src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FLOAT
    RESERVATION
    RESERVATIONS
    ROOM

Grammar

Rule 0     S' -> command
Rule 1     command -> book_command
Rule 2     command -> confirm_command
Rule 3     command -> pay_command
Rule 4     command -> cancel_command
Rule 5     command -> list_command
Rule 6     command -> view_command
Rule 7     command -> history_command
Rule 8     command -> help_command
Rule 9     command -> exit_command
Rule 10    identifier_list -> IDENTIFIER identifier_list
Rule 11    identifier_list -> IDENTIFIER
Rule 12    identifier_list -> STRING
Rule 13    identifier_list -> identifier_list - identifier_list
Rule 14    book_command -> KEYWORD_BOOK TICKET FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 15    book_command -> KEYWORD_BOOK INTEGER TICKETS FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 16    book_command -> KEYWORD_BOOK TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 17    book_command -> KEYWORD_BOOK INTEGER TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 18    book_command -> KEYWORD_BOOK TICKET FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 19    book_command -> KEYWORD_BOOK INTEGER TICKETS FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 20    book_command -> KEYWORD_BOOK TICKET FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 21    book_command -> KEYWORD_BOOK INTEGER TICKETS FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 22    book_command -> KEYWORD_BOOK TICKET FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 23    book_command -> KEYWORD_BOOK INTEGER TICKETS FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 24    book_command -> KEYWORD_BOOK ACCOMMODATION FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
Rule 25    book_command -> KEYWORD_BOOK INTEGER ACCOMMODATIONS FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
Rule 26    confirm_command -> KEYWORD_CONFIRM TICKET FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 27    confirm_command -> KEYWORD_CONFIRM INTEGER TICKETS FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 28    confirm_command -> KEYWORD_CONFIRM TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 29    confirm_command -> KEYWORD_CONFIRM INTEGER TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 30    confirm_command -> KEYWORD_CONFIRM TICKET FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 31    confirm_command -> KEYWORD_CONFIRM INTEGER TICKETS FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 32    confirm_command -> KEYWORD_CONFIRM TICKET FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 33    confirm_command -> KEYWORD_CONFIRM INTEGER TICKETS FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 34    confirm_command -> KEYWORD_CONFIRM TICKET FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 35    confirm_command -> KEYWORD_CONFIRM INTEGER TICKETS FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 36    confirm_command -> KEYWORD_CONFIRM ACCOMMODATION FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
Rule 37    confirm_command -> KEYWORD_CONFIRM INTEGER ACCOMMODATION FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
Rule 38    pay_command -> KEYWORD_PAY TICKET FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 39    pay_command -> KEYWORD_PAY INTEGER TICKETS FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 40    pay_command -> KEYWORD_PAY TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 41    pay_command -> KEYWORD_PAY INTEGER TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 42    pay_command -> KEYWORD_PAY TICKET FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 43    pay_command -> KEYWORD_PAY INTEGER TICKETS FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 44    pay_command -> KEYWORD_PAY TICKET FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 45    pay_command -> KEYWORD_PAY INTEGER TICKETS FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 46    pay_command -> KEYWORD_PAY TICKET FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 47    pay_command -> KEYWORD_PAY INTEGER TICKETS FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 48    pay_command -> KEYWORD_PAY ACCOMMODATION FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
Rule 49    pay_command -> KEYWORD_PAY INTEGER ACCOMMODATIONS FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
Rule 50    cancel_command -> KEYWORD_CANCEL TICKET FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 51    cancel_command -> KEYWORD_CANCEL INTEGER TICKETS FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 52    cancel_command -> KEYWORD_CANCEL TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 53    cancel_command -> KEYWORD_CANCEL INTEGER TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 54    cancel_command -> KEYWORD_CANCEL TICKET FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 55    cancel_command -> KEYWORD_CANCEL INTEGER TICKETS FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 56    cancel_command -> KEYWORD_CANCEL TICKET FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 57    cancel_command -> KEYWORD_CANCEL INTEGER TICKETS FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 58    cancel_command -> KEYWORD_CANCEL TICKET FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 59    cancel_command -> KEYWORD_CANCEL INTEGER TICKETS FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 60    cancel_command -> KEYWORD_CANCEL ACCOMMODATION FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
Rule 61    cancel_command -> KEYWORD_CANCEL INTEGER ACCOMMODATIONS FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
Rule 62    list_command -> KEYWORD_LIST AVAILABLE SCHEDULE FOR identifier_list SYM_END
Rule 63    list_command -> KEYWORD_LIST AVAILABLE SCHEDULE FOR identifier_list FROM identifier_list TO identifier_list SYM_END
Rule 64    list_command -> KEYWORD_LIST AVAILABLE TICKETS FOR identifier_list FROM identifier_list TO identifier_list SYM_END
Rule 65    list_command -> KEYWORD_LIST AVAILABLE TICKETS FOR CONCERT identifier_list IN identifier_list SYM_END
Rule 66    list_command -> KEYWORD_LIST AVAILABLE TICKETS FOR CONCERT identifier_list AT identifier_list SYM_END
Rule 67    list_command -> KEYWORD_LIST AVAILABLE TICKETS FOR identifier_list SYM_END
Rule 68    list_command -> KEYWORD_LIST AVAILABLE TICKETS FOR identifier_list AT identifier_list SYM_END
Rule 69    list_command -> KEYWORD_LIST AVAILABLE ACCOMMODATIONS IN identifier_list SYM_END
Rule 70    list_command -> KEYWORD_LIST AVAILABLE ROOMS FOR identifier_list IN identifier_list SYM_END
Rule 71    list_command -> KEYWORD_LIST AVAILABLE TICKETS FOR EVENT identifier_list IN identifier_list SYM_END
Rule 72    list_command -> KEYWORD_LIST AVAILABLE TICKETS FOR EVENT identifier_list AT identifier_list SYM_END
Rule 73    view_command -> KEYWORD_VIEW SCHEDULE FOR identifier_list SYM_END
Rule 74    view_command -> KEYWORD_VIEW SCHEDULES FOR identifier_list SYM_END
Rule 75    history_command -> KEYWORD_HISTORY FOR identifier_list SYM_END
Rule 76    help_command -> KEYWORD_HELP SYM_END
Rule 77    exit_command -> KEYWORD_EXIT SYM_END

Terminals, with rules where they appear

-                    : 13
ACCOMMODATION        : 24 36 37 48 60
ACCOMMODATIONS       : 25 49 61 69
AT                   : 14 15 16 17 18 19 20 20 21 21 22 22 23 23 24 25 26 27 28 29 30 31 32 32 33 33 34 34 35 35 36 37 38 39 40 41 42 43 44 44 45 45 46 46 47 47 48 49 50 51 52 53 54 55 56 56 57 57 58 58 59 59 60 61 66 68 72
AVAILABLE            : 62 63 64 65 66 67 68 69 70 71 72
CONCERT              : 18 19 20 21 30 31 32 33 42 43 44 45 54 55 56 57 65 66
DATE                 : 14 15 16 17 18 19 20 21 22 23 24 24 25 25 26 27 28 29 30 31 32 33 34 35 36 36 37 37 38 39 40 41 42 43 44 45 46 47 48 48 49 49 50 51 52 53 54 55 56 57 58 59 60 60 61 61
EVENT                : 22 23 34 35 46 47 58 59 71 72
FLOAT                : 
FOR                  : 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 63 64 65 66 67 68 70 71 72 73 74 75
FROM                 : 16 17 28 29 40 41 52 53 63 64
IDENTIFIER           : 10 11
IN                   : 18 19 24 25 30 31 36 37 42 43 48 49 54 55 60 61 65 69 70 71
INTEGER              : 15 17 19 21 23 25 27 29 31 33 35 37 39 41 43 45 47 49 51 53 55 57 59 61
KEYWORD_BOOK         : 14 15 16 17 18 19 20 21 22 23 24 25
KEYWORD_CANCEL       : 50 51 52 53 54 55 56 57 58 59 60 61
KEYWORD_CONFIRM      : 26 27 28 29 30 31 32 33 34 35 36 37
KEYWORD_EXIT         : 77
KEYWORD_HELP         : 76
KEYWORD_HISTORY      : 75
KEYWORD_LIST         : 62 63 64 65 66 67 68 69 70 71 72
KEYWORD_PAY          : 38 39 40 41 42 43 44 45 46 47 48 49
KEYWORD_VIEW         : 73 74
ON                   : 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
RESERVATION          : 
RESERVATIONS         : 
ROOM                 : 
ROOMS                : 70
SCHEDULE             : 62 63 73
SCHEDULES            : 74
STRING               : 12
SYM_END              : 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
TICKET               : 14 16 18 20 22 26 28 30 32 34 38 40 42 44 46 50 52 54 56 58
TICKETS              : 15 17 19 21 23 27 29 31 33 35 39 41 43 45 47 51 53 55 57 59 64 65 66 67 68 71 72
TIME                 : 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
TO                   : 16 17 24 25 28 29 36 37 40 41 48 49 52 53 60 61 63 64
error                : 

Nonterminals, with rules where they appear

book_command         : 1
cancel_command       : 4
command              : 0
confirm_command      : 2
exit_command         : 9
help_command         : 8
history_command      : 7
identifier_list      : 10 13 13 14 14 15 15 16 16 16 16 17 17 17 17 18 18 18 19 19 19 20 20 20 21 21 21 22 22 22 23 23 23 24 24 24 25 25 25 26 26 27 27 28 28 28 28 29 29 29 29 30 30 30 31 31 31 32 32 32 33 33 33 34 34 34 35 35 35 36 36 36 37 37 37 38 38 39 39 40 40 40 40 41 41 41 41 42 42 42 43 43 43 44 44 44 45 45 45 46 46 46 47 47 47 48 48 48 49 49 49 50 50 51 51 52 52 52 52 53 53 53 53 54 54 54 55 55 55 56 56 56 57 57 57 58 58 58 59 59 59 60 60 60 61 61 61 62 63 63 63 64 64 64 65 65 66 66 67 68 68 69 70 70 71 71 72 72 73 74 75
list_command         : 5
pay_command          : 3
view_command         : 6

Parsing method: LALR

state 0

    (0) S' -> . command
    (1) command -> . book_command
    (2) command -> . confirm_command
    (3) command -> . pay_command
    (4) command -> . cancel_command
    (5) command -> . list_command
    (6) command -> . view_command
    (7) command -> . history_command
    (8) command -> . help_command
    (9) command -> . exit_command
    (14) book_command -> . KEYWORD_BOOK TICKET FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (15) book_command -> . KEYWORD_BOOK INTEGER TICKETS FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (16) book_command -> . KEYWORD_BOOK TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (17) book_command -> . KEYWORD_BOOK INTEGER TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (18) book_command -> . KEYWORD_BOOK TICKET FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (19) book_command -> . KEYWORD_BOOK INTEGER TICKETS FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (20) book_command -> . KEYWORD_BOOK TICKET FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (21) book_command -> . KEYWORD_BOOK INTEGER TICKETS FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (22) book_command -> . KEYWORD_BOOK TICKET FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (23) book_command -> . KEYWORD_BOOK INTEGER TICKETS FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (24) book_command -> . KEYWORD_BOOK ACCOMMODATION FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
    (25) book_command -> . KEYWORD_BOOK INTEGER ACCOMMODATIONS FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
    (26) confirm_command -> . KEYWORD_CONFIRM TICKET FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (27) confirm_command -> . KEYWORD_CONFIRM INTEGER TICKETS FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (28) confirm_command -> . KEYWORD_CONFIRM TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (29) confirm_command -> . KEYWORD_CONFIRM INTEGER TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (30) confirm_command -> . KEYWORD_CONFIRM TICKET FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (31) confirm_command -> . KEYWORD_CONFIRM INTEGER TICKETS FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (32) confirm_command -> . KEYWORD_CONFIRM TICKET FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (33) confirm_command -> . KEYWORD_CONFIRM INTEGER TICKETS FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (34) confirm_command -> . KEYWORD_CONFIRM TICKET FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (35) confirm_command -> . KEYWORD_CONFIRM INTEGER TICKETS FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (36) confirm_command -> . KEYWORD_CONFIRM ACCOMMODATION FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
    (37) confirm_command -> . KEYWORD_CONFIRM INTEGER ACCOMMODATION FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
    (38) pay_command -> . KEYWORD_PAY TICKET FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (39) pay_command -> . KEYWORD_PAY INTEGER TICKETS FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (40) pay_command -> . KEYWORD_PAY TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (41) pay_command -> . KEYWORD_PAY INTEGER TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (42) pay_command -> . KEYWORD_PAY TICKET FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (43) pay_command -> . KEYWORD_PAY INTEGER TICKETS FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (44) pay_command -> . KEYWORD_PAY TICKET FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (45) pay_command -> . KEYWORD_PAY INTEGER TICKETS FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (46) pay_command -> . KEYWORD_PAY TICKET FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (47) pay_command -> . KEYWORD_PAY INTEGER TICKETS FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (48) pay_command -> . KEYWORD_PAY ACCOMMODATION FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
    (49) pay_command -> . KEYWORD_PAY INTEGER ACCOMMODATIONS FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
    (50) cancel_command -> . KEYWORD_CANCEL TICKET FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (51) cancel_command -> . KEYWORD_CANCEL INTEGER TICKETS FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (52) cancel_command -> . KEYWORD_CANCEL TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (53) cancel_command -> . KEYWORD_CANCEL INTEGER TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (54) cancel_command -> . KEYWORD_CANCEL TICKET FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (55) cancel_command -> . KEYWORD_CANCEL INTEGER TICKETS FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (56) cancel_command -> . KEYWORD_CANCEL TICKET FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (57) cancel_command -> . KEYWORD_CANCEL INTEGER TICKETS FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (58) cancel_command -> . KEYWORD_CANCEL TICKET FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (59) cancel_command -> . KEYWORD_CANCEL INTEGER TICKETS FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (60) cancel_command -> . KEYWORD_CANCEL ACCOMMODATION FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
    (61) cancel_command -> . KEYWORD_CANCEL INTEGER ACCOMMODATIONS FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
    (62) list_command -> . KEYWORD_LIST AVAILABLE SCHEDULE FOR identifier_list SYM_END
    (63) list_command -> . KEYWORD_LIST AVAILABLE SCHEDULE FOR identifier_list FROM identifier_list TO identifier_list SYM_END
    (64) list_command -> . KEYWORD_LIST AVAILABLE TICKETS FOR identifier_list FROM identifier_list TO identifier_list SYM_END
    (65) list_command -> . KEYWORD_LIST AVAILABLE TICKETS FOR CONCERT identifier_list IN identifier_list SYM_END
    (66) list_command -> . KEYWORD_LIST AVAILABLE TICKETS FOR CONCERT identifier_list AT identifier_list SYM_END
    (67) list_command -> . KEYWORD_LIST AVAILABLE TICKETS FOR identifier_list SYM_END
    (68) list_command -> . KEYWORD_LIST AVAILABLE TICKETS FOR identifier_list AT identifier_list SYM_END
    (69) list_command -> . KEYWORD_LIST AVAILABLE ACCOMMODATIONS IN identifier_list SYM_END
    (70) list_command -> . KEYWORD_LIST AVAILABLE ROOMS FOR identifier_list IN identifier_list SYM_END
    (71) list_command -> . KEYWORD_LIST AVAILABLE TICKETS FOR EVENT identifier_list IN identifier_list SYM_END
    (72) list_command -> . KEYWORD_LIST AVAILABLE TICKETS FOR EVENT identifier_list AT identifier_list SYM_END
    (73) view_command -> . KEYWORD_VIEW SCHEDULE FOR identifier_list SYM_END
    (74) view_command -> . KEYWORD_VIEW SCHEDULES FOR identifier_list SYM_END
    (75) history_command -> . KEYWORD_HISTORY FOR identifier_list SYM_END
    (76) help_command -> . KEYWORD_HELP SYM_END
    (77) exit_command -> . KEYWORD_EXIT SYM_END

    KEYWORD_BOOK    shift and go to state 11
    KEYWORD_CONFIRM shift and go to state 12
    KEYWORD_PAY     shift and go to state 13
    KEYWORD_CANCEL  shift and go to state 14
    KEYWORD_LIST    shift and go to state 15
    KEYWORD_VIEW    shift and go to state 16
    KEYWORD_HISTORY shift and go to state 17
    KEYWORD_HELP    shift and go to state 18
    KEYWORD_EXIT    shift and go to state 19

    command                        shift and go to state 1
    book_command                   shift and go to state 2
    confirm_command                shift and go to state 3
    pay_command                    shift and go to state 4
    cancel_command                 shift and go to state 5
    list_command                   shift and go to state 6
    view_command                   shift and go to state 7
    history_command                shift and go to state 8
    help_command                   shift and go to state 9
    exit_command                   shift and go to state 10

state 1

    (0) S' -> command .



state 2

    (1) command -> book_command .

    $end            reduce using rule 1 (command -> book_command .)


state 3

    (2) command -> confirm_command .

    $end            reduce using rule 2 (command -> confirm_command .)


state 4

    (3) command -> pay_command .

    $end            reduce using rule 3 (command -> pay_command .)


state 5

    (4) command -> cancel_command .

    $end            reduce using rule 4 (command -> cancel_command .)


state 6

    (5) command -> list_command .

    $end            reduce using rule 5 (command -> list_command .)


state 7

    (6) command -> view_command .

    $end            reduce using rule 6 (command -> view_command .)


state 8

    (7) command -> history_command .

    $end            reduce using rule 7 (command -> history_command .)


state 9

    (8) command -> help_command .

    $end            reduce using rule 8 (command -> help_command .)


state 10

    (9) command -> exit_command .

    $end            reduce using rule 9 (command -> exit_command .)


state 11

    (14) book_command -> KEYWORD_BOOK . TICKET FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (15) book_command -> KEYWORD_BOOK . INTEGER TICKETS FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (16) book_command -> KEYWORD_BOOK . TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (17) book_command -> KEYWORD_BOOK . INTEGER TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (18) book_command -> KEYWORD_BOOK . TICKET FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (19) book_command -> KEYWORD_BOOK . INTEGER TICKETS FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (20) book_command -> KEYWORD_BOOK . TICKET FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (21) book_command -> KEYWORD_BOOK . INTEGER TICKETS FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (22) book_command -> KEYWORD_BOOK . TICKET FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (23) book_command -> KEYWORD_BOOK . INTEGER TICKETS FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (24) book_command -> KEYWORD_BOOK . ACCOMMODATION FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
    (25) book_command -> KEYWORD_BOOK . INTEGER ACCOMMODATIONS FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END

    TICKET          shift and go to state 20
    INTEGER         shift and go to state 21
    ACCOMMODATION   shift and go to state 22


state 12

    (26) confirm_command -> KEYWORD_CONFIRM . TICKET FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (27) confirm_command -> KEYWORD_CONFIRM . INTEGER TICKETS FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (28) confirm_command -> KEYWORD_CONFIRM . TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (29) confirm_command -> KEYWORD_CONFIRM . INTEGER TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (30) confirm_command -> KEYWORD_CONFIRM . TICKET FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (31) confirm_command -> KEYWORD_CONFIRM . INTEGER TICKETS FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (32) confirm_command -> KEYWORD_CONFIRM . TICKET FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (33) confirm_command -> KEYWORD_CONFIRM . INTEGER TICKETS FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (34) confirm_command -> KEYWORD_CONFIRM . TICKET FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (35) confirm_command -> KEYWORD_CONFIRM . INTEGER TICKETS FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (36) confirm_command -> KEYWORD_CONFIRM . ACCOMMODATION FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
    (37) confirm_command -> KEYWORD_CONFIRM . INTEGER ACCOMMODATION FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END

    TICKET          shift and go to state 23
    INTEGER         shift and go to state 24
    ACCOMMODATION   shift and go to state 25


state 13

    (38) pay_command -> KEYWORD_PAY . TICKET FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (39) pay_command -> KEYWORD_PAY . INTEGER TICKETS FOR identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (40) pay_command -> KEYWORD_PAY . TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (41) pay_command -> KEYWORD_PAY . INTEGER TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (42) pay_command -> KEYWORD_PAY . TICKET FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (43) pay_command -> KEYWORD_PAY . INTEGER TICKETS FOR CONCERT identifier_list IN identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (44) pay_command -> KEYWORD_PAY . TICKET FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (45) pay_command -> KEYWORD_PAY . INTEGER TICKETS FOR CONCERT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (46) pay_command -> KEYWORD_PAY . TICKET FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (47) pay_command -> KEYWORD_PAY . INTEGER TICKETS FOR EVENT identifier_list AT identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (48) pay_command -> KEYWORD_PAY . ACCOMMODATION FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END
    (49) pay_command -> KEYWORD_PAY . INTEGER ACCOMMODATIONS FOR identifier_list IN identifier_list ON DATE TO DATE AT TIME FOR identifier_list SYM_END

    TICKET          shift and go to state 26
    INTEGER         shift and go to state 27
    ACCOMMODATION   shift and go to state 28


state 14
